Style zones now I found a way that works

--- a/OzricUI/Components/GraphEditor.razor
+++ b/OzricUI/Components/GraphEditor.razor
@@ -69,9 +69,9 @@
         diagram = new Diagram(options);
         
         foreach (var modelType in GraphNodeModel.GetDerivatives())
-        {
             diagram.RegisterModelComponent(modelType, typeof(GraphNodeComponent));
-        }
+
+        diagram.RegisterModelComponent(typeof(ZoneModel), typeof(ZoneComponent));
         
         diagram.SelectionChanged += OnSelectionChanged;
         // diagram.Nodes.Removed += OnNodeRemoved;
