--- a/OzricUI/Components/GraphNodeComponent.razor.css
+++ b/OzricUI/Components/GraphNodeComponent.razor.css
@@ -5,6 +5,7 @@
     background-color: #f5f5f5;
     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 1px 3px 0 rgba(0,0,0,.12);
     width: 170px;
+    opacity: 100%;
 }
 
 .ozric-height-0 {
