--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -155,7 +155,7 @@
     {
         var headers = httpContextAccessor.HttpContext.Request.Headers;
         if (headers.ContainsKey("X-Ingress-Path"))
-            return headers["X-Ingress-Path"];
+            return $"{headers["X-Ingress-Path"]}/";
 
         return "/";
     }
